<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DE333333"
    tools:context=".GenerateQRCodeActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_back_arrow"
        android:contentDescription="@string/back_arrow_icon"
        android:padding="10dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/generate_qr_code"
        android:textColor="@color/yellow"
        android:textSize="26sp"
        android:textStyle="bold"
        android:letterSpacing=".1"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/titleTv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/qrInputEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/enter_text_or_url"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="#888888" />

            <Button
                android:id="@+id/generateBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/generate"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/qrResultCard"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCard">

        <ImageView
            android:id="@+id/qrCodeIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/qr_code_icon"
            android:padding="20dp" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:contentDescription="@string/share_icon"
        android:padding="15dp"
        android:background="@drawable/bg_back_arrow"
        android:src="@drawable/share_icon_black_fill"
        android:visibility="gone"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrResultCard" />

    <TextView
        android:id="@+id/shareWithOtherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_app_with_others"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/shareBtn"
        app:layout_constraintStart_toStartOf="@+id/shareBtn"
        app:layout_constraintTop_toBottomOf="@+id/shareBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>