<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp">

            <ImageButton
                android:id="@+id/galleyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/gallery_icon"
                android:src="@drawable/clarity_image_gallery_solid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/flashBtn"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/flash_icon"
                android:src="@drawable/baseline_flash_on_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/scanner_box"
        android:contentDescription="@string/scanner_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/PreviewView"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_230sdp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:background="@drawable/level_icon"
        android:contentDescription="@string/scanner_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp">

            <ImageButton
                android:id="@+id/qrCodeGenerateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/qr_code_generate_icon"
                android:src="@drawable/qr_code_generator"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrCodeGenerateBtn" />

            <ImageButton
                android:id="@+id/settingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/setting_icon"
                android:src="@drawable/setting_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/historyFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/history"
        android:src="@drawable/history_icon"
        app:backgroundTint="@color/yellow"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/bottomCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellow"
        android:elevation="5dp"
        android:outlineAmbientShadowColor="@color/yellow"
        android:outlineSpotShadowColor="@color/yellow"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/bottomCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomCard">

        <ImageButton
            android:id="@+id/qrScanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/qr_code_icon"
            android:src="@drawable/qr_code_scanner_icon" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>